# iqdeepdive-workiq

./: .env.sample  .gitignore  ADMIN_SETUP.md  ATTRIBUTION.md  README.md  azure.yaml  pyproject.toml
deploy/: 01-create-blueprint.ps1  02-build-image.ps1  03-create-agent.ps1  04-publish-digital-worker.ps1  05-create-oauth-grants.ps1  06-create-bot.ps1  README.md  _common.ps1  config.sample.ps1
docs/: teams.md
infra/: README.md  create-workiq-toolbox.py  setup-env.py
infra/a365/: README.md  add-current-user-as-blueprint-owner.ps1  botservice.bicep  configure-blueprint-backend.ps1  create-blueprintsp-oauth2-grants.ps1  enable-activity-protocol.ps1  publish-autopilot.ps1  publish-digital-worker.ps1
infra/hooks/: postprovision.ps1  postprovision.sh
notebooks/: _shared.py  part1-workiq-api-concepts.ipynb  part2-workiq-a2a.ipynb  part3-workiq-mcp.ipynb  part4-workiq-tools-actions.ipynb  part5-workiq-in-maf-agent.ipynb  requirements.txt
src/workmate-agent/: .env.example  main.py  pyproject.toml  workiq_consent.py
src/workmate-autopilot/workmate_agent/: ToolingManifest.json  __main__.py  agent.py  main.py
src/workmate-autopilot/workmate_agent/foundry-infra/: Dockerfile
src/workmate-host/: README.md
src/workmate-host/workmate_agent/: __init__.py  host_agent_server.py
src/workmate_agent/: .env.example  ToolingManifest.json  __main__.py  agent.py  host_agent_server.py  instructions.md  main.py  pyproject.toml
src/workmate_agent/foundry-infra/: Dockerfile
